[package]
name = "readymade"
version = "0.12.5"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Install ready-made distribution images"
repository = "https://github.com/FyraLabs/readymade"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
const_format = { workspace = true }
educe = "0.6.0"
filesystem-table = { workspace = true }
freedesktop-desktop-entry = { version = "0.7.11", git = "https://github.com/madonuko/freedesktop-desktop-entry", default-features = false }
gtk4 = { version = "*", features = ["v4_12"] }
i18n-embed = { version = "0.16.0", features = [
    "desktop-requester",
    "filesystem-assets",
    "fluent-system",
] }
i18n-embed-fl = "0.10.0"
ipc-channel = { workspace = true }
itertools = { workspace = true }
kurage = "0.1.4"
libhelium = { version = "0.12.0", features = ["gtk_v4_12", "v1_8"] }
libreadymade = { path = "crates/libreadymade" }
lsblk = { workspace = true }
no_color = "0.2.0"
parking_lot = "0.12.5"
paste = "1.0.15"
poly_l10n = "0.0.7"
relm4 = { version = "*", features = ["macros"] }
rust-embed = { version = "8.11.0", features = ["include-exclude"] }
sentry = { version = "0.46.2", features = ["tracing", "logs"] }
sentry-eyre = "0.3.0"
serde-systemd-unit = { path = "./crates/serde-systemd-unit" }
serde_json = "1.0.149"
strip-ansi-escapes = "0.2.1"
taidan_proc_macros = { path = "./crates/taidan_proc_macros" }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-journald = "0.3.2"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-test = "0.2.6"
with_builtin_macros = "0.1.0"

[build-dependencies]
glib-build-tools = "0.21.0"

[workspace.dependencies]
color-eyre = "=0.6.5"
const_format = "0.2.35"
filesystem-table = { version = "0.1.2", path = "./crates/filesystem-table" }
format-bytes = "0.3.0"
ipc-channel = { version = "0.21.0", features = ["async"] }
itertools = "0.14.0"
lsblk = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.1"
tempfile = "3.25.0"
thiserror = "2.0.18"
tracing = { version = "0.1.44", features = ["log"] }
uuid = { version = "1.20.0", features = ["serde"] }

[workspace.lints.clippy]
# cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

disallowed-macros = "deny"
excessive-nesting = "warn"

# arithmetic_side_effects = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
field_scoped_visibility_modifiers = "deny"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
# indexing_slicing = "warn"
infinite_loop = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "warn"
multiple_inherent_impl = "warn"
needless_raw_strings = "warn"
rc_buffer = "warn"
rc_mutex = "deny"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "deny"
unimplemented = "warn"
unneeded_field_pattern = "warn"
# unwrap_in_result = "warn"

equatable_if_let = "allow"
cognitive_complexity = "allow"
cast_possible_truncation = "allow"


[workspace]
members = [
    "crates/filesystem-table",
    "crates/serde-systemd-unit",
    "crates/taidan_proc_macros",
    "crates/libreadymade",
]
