[package]
name = "readymade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# oh my fucking god, sys76 makes their shit not buildable on non-debian platforms

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
# bitflags = "2.4.0"
clap = "4.3.19"
color-eyre = "0.6.2"
distinst = { path = "../distinst", version = "0.5.0" }
tracing = { version = "0.1.37", features = ["log", "max_level_debug", "log-always"] }
tracing-subscriber = "0.3.13"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "^0.8"

[dependencies.gdk]
package = "gdk4"
git = "https://github.com/gtk-rs/gtk4-rs"

[dependencies.he]
package = "libhelium"
git = "https://github.com/tau-OS/rust"
version = "1.0.0"
features = ["v1_3"]
# force replace loopdev with the patched version
