[package]
name = "filesystem-table"
version = "0.1.2"
edition = "2021"

authors = [
    "Cappy Ishihara <cappy@fyralabs.com>",
    "madonuko <mado@fyralabs.com>",
]
license = "MIT"
categories = ["filesystem", "encoding"]
keywords = ["fstab", "mtab", "filesystem"]
readme = "README.md"
repository = "https://github.com/FyraLabs/readymade"
description = "A library for reading and writing filesystem tables."

[lib]
path = "./lib.rs"

[dependencies]
thiserror = "2.0.12"
lsblk = "0.6"

