[package]
name = "libreadymade"
version = "0.12.5"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Install ready-made distribution images"
repository = "https://github.com/FyraLabs/readymade"
publish = false

[dependencies]
backhand = "0.24.1"
bytesize = { version = "2.3.1", features = ["serde"] }
color-eyre = { workspace = true }
const_format = { workspace = true }
educe = "0.6.0"
enum_dispatch = "0.3.13"
file-guard = "0.2.0"
filesystem-table = { workspace = true }
format-bytes = { workspace = true }
freedesktop-desktop-entry = { version = "0.7.11", git = "https://github.com/madonuko/freedesktop-desktop-entry", default-features = false }
ipc-channel = { workspace = true }
itertools = { workspace = true }
jwalk = "0.8.1"
lsblk = { workspace = true }
nix = { version = "0.31.1", features = ["fs", "mount", "user"] }
parking_lot = "0.12.5"
paste = "1.0.15"
rayon = "1.11.0"
scopeguard = "1.2.0"
serde = { workspace = true }
serde-systemd-unit = { path = "../serde-systemd-unit" }
serde_json = "1.0.149"
serde_valid = { version = "2.0.1", features = ["toml"] }
serde_with = { workspace = true }
strip-ansi-escapes = "0.2.1"
sys-mount = "3.1.0"
tempfile = { workspace = true }
thiserror = { workspace = true }
tiffin = { version = "0.3.2" }
toml = "1.0.1"
tracing = { workspace = true }
tracing-journald = "0.3.2"
tracing-test = "0.2.6"
uu_cp = { version = "0.6.0", features = [
    "exacl",
    "feat_acl",
    "feat_selinux",
    "selinux",
], optional = true }
uuid = { workspace = true }
xattr = "1.6.1"

[features]
uutils = ["dep:uu_cp"]

[lib]
path = "./lib.rs"

[lints]
workspace = true
