[package]
name = "readymade-lib"
version = "0.12.5"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Readymade installation logic"
repository = "https://github.com/FyraLabs/readymade"
publish = false

[dependencies]
color-eyre = "=0.6.5"
tracing = { version = "0.1.41", features = ["log"] }
itertools = "0.14.0"
thiserror = "2.0.12"
tempfile = "3.20.0"
lsblk = "0.6.1"
const_format = "0.2.34"
sys-mount = "3.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bytesize = { version = "2.0.1", features = ["serde"] }
serde_with = "3.12.0"
uuid = { version = "1.17.0", features = ["serde"] }
tiffin = { version = "0.3.2" }
rayon = "1.10.0"
strip-ansi-escapes = "0.2.1"
toml = "0.9.7"
serde_valid = { version = "1.0.5", features = ["toml"] }
nix = { version = "0.30.1", features = ["fs", "mount", "user"] }
backhand = "0.23.0"
enum_dispatch = "0.3.13"
scopeguard = "1.2.0"
tracing-test = "0.2.5"
serde-systemd-unit = { path = "../serde-systemd-unit" }
format-bytes = "0.3.0"
ipc-channel = { version = "0.20.0", features = ["async"] }
relm4 = "0.9.1"
jwalk = "0.8.1"
xattr = "1.5.0"
filesystem-table = { version = "0.1.2", path = "../filesystem-table" }
uu_cp = { version = "0.2.2", features = [
    "exacl",
    "feat_acl",
    "feat_selinux",
    "selinux",
], optional = true }
educe = "0.6.0"
parking_lot = "0.12.4"
file-guard = "0.2.0"
taidan_proc_macros = { path = "../taidan_proc_macros" }

[features]
uutils = ["dep:uu_cp"]

[lints.clippy]
complexity = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
disallowed-macros = "deny"
excessive-nesting = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
field_scoped_visibility_modifiers = "deny"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
infinite_loop = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "warn"
multiple_inherent_impl = "warn"
needless_raw_strings = "warn"
rc_buffer = "warn"
rc_mutex = "deny"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_outside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "deny"
unimplemented = "warn"
unneeded_field_pattern = "warn"
equatable_if_let = "allow"
cognitive_complexity = "allow"
cast_possible_truncation = "allow"
